# opengl_test

./: .gitignore  CMakeLists.txt  main.cpp
shaders/: fragmentShader.glsl  shader.hpp  vertexShader.glsl
utils/: CMakeLists.txt  load_shaders.cpp  load_shaders.h
